--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,52 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
+ 
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <div style="text-align: center; margin: 15px;">
+   <ion-label style="font-weight: 400; font-style: 1.5em;">Weather App</ion-label>
   </div>
+  <ion-searchbar [(ngModel)]="cityName" (ngModelChange)="loadData()" placeholder="Nhập thành phố" animated=""></ion-searchbar>
+
+  <ion-card class="cardStyle">
+    <ion-item lines="none">
+      <p>Thời thiết hôm nay</p>
+      <ion-label id="date" slot="end">
+        {{todayDate | date: "EEE dd MMM"}}
+      </ion-label>
+    </ion-item>
+
+    <ion-item lines="none">
+      <span style="font-size: 50px;" id="temp">
+        {{(weatherTemp?.temp - 273.15 ).toFixed(0)}}
+      </span>
+
+      <span style="font-size: 3em; font-weight: bold;">&deg;</span>
+      <img slot="end" [src]=weatherIcon>
+   
+    </ion-item>
+
+    <ion-item>
+      <ion-icon id="locationIcon" name="location"></ion-icon>
+      <span>{{cityName}}</span>
+    </ion-item>
+    
+  </ion-card>
+
+  <ion-card class="cardStyle">
+    <ion-item>
+       <span>Nhiệt độ cao nhất</span>
+       <span slot="end">{{(weatherTemp?.temp_max - 273.15).toFixed(0)}}</span>
+    </ion-item>
+
+    <ion-item>
+      <span>Nhiệt độ thấp nhất</span>
+      <span slot="end">{{(weatherTemp?.temp_min - 273.15).toFixed(0)}}</span>
+    </ion-item>
+
+    <ion-item>
+      <span>Độ ẩm</span>
+      <span slot="end">{{weatherTemp?.humidity}}%</span>
+    </ion-item>
+  </ion-card>
 </ion-content>
